ghc-4335c07/testsuite/tests/parser/should_fail/readFail014.hs
main = f
  where
     f = f }
